--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,10 +124,8 @@
     </string-array>
 
     <!--  FRAGMENT GRAFIK  -->
-    <string name="tab_text_1">Grafik Kiri</string>
-    <string name="tab_text_2">Grafik Kanan</string>
-    <string name="content_tab_kiri">Welcome Grafik Kiri</string>
-    <string name="content_tab_kanan">Welcome Grafik Kanan</string>
+    <string name="tab_text_1">Keungan Kerjasama</string>
+    <string name="tab_text_2">Jumlah Kerjasama</string>
     <string name="content_tab_text">This is Tab %1$d</string>
     <string name="title_grafikkiri">Keuangan Kerjasama Tahun ke Tahun</string>
     <string name="title_grafikkanan">Jumlah Kerjasama Tahun ke Tahun</string>
@@ -143,8 +141,9 @@
 
 
     <!--  FRAGMENT PROFILE  -->
-    <string name="headerProfile">Welcome User</string>
+    <string name="headerProfile">Profile UNS</string>
     <string name="descProfile">Description Photo</string>
     <string name="profile_data">Data Profile</string>
     <string name="share_button">Share</string>
+    <string name="desc_uns">UNS adalah universitas negeri di Surakarta, Jawa Tengah, Indonesia, didirikan pada 11 Maret 1976. Kampus ini dikenal dengan fokus pada ilmu pengetahuan dan teknologi. Lingkungannya hijau dan dilengkapi fasilitas modern seperti perpustakaan, laboratorium, dan pusat olahraga. UNS menawarkan berbagai program studi dari tingkat sarjana hingga doktoral. Selain itu, universitas ini aktif dalam kegiatan sosial, budaya, dan memiliki kerjasama internasional untuk meningkatkan kualitas pendidikan dan penelitian.</string>
 </resources>
