push news sementara

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="judul_news1">UNS gandeng BPKP jalin kerja sama Tri Dharma Perguruan Tinggi</string>
     <string name="judul_news2">UNS dan IKA UNS Jalin Kerja Sama dengan PT. KAI</string>
     <string name="judul_news3">UNS Tanda Tangani MoU dengan Universitas Malahayati</string>
+    <string name="judul_news4">UNS Tanda Tangani MoU dengan Universitas Malahayati</string>
 
     <string name="tgl_news1">21 September, 2022</string>
     <string name="tgl_news2">11 Maret 2022</string>
