--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,4 +146,47 @@
     <string name="profile_data">Data Profile</string>
     <string name="share_button">Share</string>
     <string name="desc_uns">UNS adalah universitas negeri di Surakarta, Jawa Tengah, Indonesia, didirikan pada 11 Maret 1976. Kampus ini dikenal dengan fokus pada ilmu pengetahuan dan teknologi. Lingkungannya hijau dan dilengkapi fasilitas modern seperti perpustakaan, laboratorium, dan pusat olahraga. UNS menawarkan berbagai program studi dari tingkat sarjana hingga doktoral. Selain itu, universitas ini aktif dalam kegiatan sosial, budaya, dan memiliki kerjasama internasional untuk meningkatkan kualitas pendidikan dan penelitian.</string>
+    <string name="sejarah">Sejarah</string>
+    <string name="tujuan">Tujuan</string>
+    <string name="budaya_kerjasama">Budaya Kerjasama</string>
+    <string name="share">Share</string>
+    <string name="desSejarah">Universitas Sebelas Maret (UNS) resmi didirikan pada 11 Maret 1976 di Solo. Upaya untuk mendirikan universitas negeri di Solo sudah dimulai sejak 1950-an, namun terkendala oleh perang, situasi politik, dan ekonomi. Pada tahun 1963, muncul Universitas Kota Praja Surakarta (UPKS), yang kemudian dibubarkan setelah peristiwa G30S/PKI.Pada 1966, Universitas Nasional Saraswati dan beberapa universitas lainnya membentuk Universitas Gabungan Surakarta (UGS). Pada Desember 1975, UGS disetujui untuk dinegerikan, dan pada 11 Maret 1976, Universitas Negeri Surakarta Sebelas Maret resmi berdiri dengan sembilan fakultas. Kampus utama UNS berada di Kentingan, Jebres, Surakarta, sejak 1977. Pada tahun 1982, nama universitas diubah menjadi Universitas Sebelas Maret (UNS) sesuai Keputusan Presiden RI No. 55 Tahun 1982.</string>
+    <string name="visi">Visi</string>
+    <string name="misi">Misi</string>
+
+    <string-array name="judul_profile">
+        <item>Sejarah</item>
+        <item>Visi</item>
+        <item>Misi</item>
+        <item>Tujuan</item>
+        <item>Budaya Kerja</item>
+    </string-array>
+
+    <string-array name="detail_profile">
+        <item>Universitas Sebelas Maret (UNS) resmi berdiri pada tanggal 11 Maret 1976 di Solo, dengan dibacakannya Keputusan Presiden Republik Indonesia tentang pembukaan universitas tersebut. Keinginan untuk mendirikan universitas negeri di Solo sudah ada sejak tahun 1950-an, namun terkendala oleh berbagai masalah seperti perang, ketidakstabilan politik, dan ekonomi yang buruk.
+            Upaya pendirian kembali muncul beberapa kali, di antaranya pada tahun 1953 dan 1968, namun selalu gagal karena kendala finansial dan kurangnya dukungan. Pada tahun 1975, delapan universitas swasta dan kedinasan bergabung menjadi Universitas Gabungan Surakarta (UGS). Pada 11 Maret 1976, UGS resmi dinegerikan dan digabung dengan beberapa perguruan tinggi lainnya untuk membentuk UNS.
+            Sejak tahun 1977, UNS memiliki kampus induk terpadu di Kentingan, Jebres, Surakarta. Pada tahun 1982, nama resmi universitas ini ditetapkan menjadi Universitas Sebelas Maret (UNS) melalui Keputusan Presiden RI No. 55 Tahun 1982.</item>
+        <item>Menjadi pusat pengembangan ilmu pengetahuan, teknologi, dan seni yang unggul di tingkat internasional dengan berlandaskan pada nilai luhur budaya nasional.</item>
+        <item><![CDATA[
+            <ul>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
+            </ul>
+        ]]></item>
+        <item><![CDATA[
+            <ul>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
+            </ul>
+        ]]></item>
+        <item><![CDATA[
+            <ul>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
+            </ul>
+        ]]></item>
+    </string-array>
 </resources>
