--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,7 +178,7 @@
     <!--  FRAGMENT PROFILE  -->
     <string name="headerProfile">Profile UNS</string>
     <string name="descProfile">Description Photo</string>
-    <string name="profile_data">Data Profile</string>
+    <string name="profile_data">Deskripsi</string>
     <string name="share_button">Share</string>
     <string name="desc_uns">UNS adalah universitas negeri di Surakarta, Jawa Tengah, Indonesia, didirikan pada 11 Maret 1976. Kampus ini dikenal dengan fokus pada ilmu pengetahuan dan teknologi. Lingkungannya hijau dan dilengkapi fasilitas modern seperti perpustakaan, laboratorium, dan pusat olahraga. UNS menawarkan berbagai program studi dari tingkat sarjana hingga doktoral. Selain itu, universitas ini aktif dalam kegiatan sosial, budaya, dan memiliki kerjasama internasional untuk meningkatkan kualitas pendidikan dan penelitian.</string>
     <string name="sejarah">Sejarah</string>
@@ -198,30 +198,38 @@
     </string-array>
 
     <string-array name="detail_profile">
-        <item>Universitas Sebelas Maret (UNS) resmi berdiri pada tanggal 11 Maret 1976 di Solo, dengan dibacakannya Keputusan Presiden Republik Indonesia tentang pembukaan universitas tersebut. Keinginan untuk mendirikan universitas negeri di Solo sudah ada sejak tahun 1950-an, namun terkendala oleh berbagai masalah seperti perang, ketidakstabilan politik, dan ekonomi yang buruk.
+        <item><![CDATA[<p>Universitas Sebelas Maret (UNS) resmi berdiri pada tanggal 11 Maret 1976 di Solo, dengan dibacakannya Keputusan Presiden Republik Indonesia tentang pembukaan universitas tersebut. Keinginan untuk mendirikan universitas negeri di Solo sudah ada sejak tahun 1950-an, namun terkendala oleh berbagai masalah seperti perang, ketidakstabilan politik, dan ekonomi yang buruk.
             Upaya pendirian kembali muncul beberapa kali, di antaranya pada tahun 1953 dan 1968, namun selalu gagal karena kendala finansial dan kurangnya dukungan. Pada tahun 1975, delapan universitas swasta dan kedinasan bergabung menjadi Universitas Gabungan Surakarta (UGS). Pada 11 Maret 1976, UGS resmi dinegerikan dan digabung dengan beberapa perguruan tinggi lainnya untuk membentuk UNS.
-            Sejak tahun 1977, UNS memiliki kampus induk terpadu di Kentingan, Jebres, Surakarta. Pada tahun 1982, nama resmi universitas ini ditetapkan menjadi Universitas Sebelas Maret (UNS) melalui Keputusan Presiden RI No. 55 Tahun 1982.</item>
-        <item>Menjadi pusat pengembangan ilmu pengetahuan, teknologi, dan seni yang unggul di tingkat internasional dengan berlandaskan pada nilai luhur budaya nasional.</item>
+            Sejak tahun 1977, UNS memiliki kampus induk terpadu di Kentingan, Jebres, Surakarta. Pada tahun 1982, nama resmi universitas ini ditetapkan menjadi Universitas Sebelas Maret (UNS) melalui Keputusan Presiden RI No. 55 Tahun 1982.</p>]]></item>
+        <item><![CDATA[<p>Menjadi pusat pengembangan ilmu pengetahuan, teknologi, dan seni yang unggul di tingkat internasional dengan berlandaskan pada nilai luhur budaya nasional.</p>]]></item>
         <item><![CDATA[
-            <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
-            </ul>
+            <ol>
+                <li>Menyelanggarakan pendidikan dan pengajraran yang menuntut pengembangan diri Dosen dan mendorong kemandirian Mahasiswa dalam memperoleh pengetahuan, keterampilan, dan sikap;</li>
+                <li>Menyelenggarakan penelitian yang berbasis pada penemuan baru di bidang ilmu pengetahuan, teknologi, dan seni; dan</li>
+                <li>Menyelenggarakan kegiatan pengabdian masyarakat yang berorientasi pada upaya pemberedayaan masyarakat.</li>
+            </ol>
         ]]></item>
         <item><![CDATA[
-            <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
-            </ul>
+            <ol>
+                <li>Menciptakan lingkungan yang mendorong Warga Kampus UNS mengembangkan kemampuan diri secara optimal;</li>
+                <li>Menghasilkan lulusan yang bertakwa kepada Tuhan Yang Maha Esa, berbudi luhur, cerdas, terampil, mandiri, dan sehat jasmani, rohani, dan sosial;</li>
+                <li>Menciptakan wahana pengembangan ilmu pengetahuan dan teknologi yang berdaya guna dan berhasil guna;</li>
+                <li>Mendiseminasikan hasil pendidikan dan pengajaran serta penelitian dan pengabdian kepada masyarakat sehingga terjadi transformasi berkelanjutan untuk kehidupan yang lebih sejahtera;</li>
+                <li>Mengembangkan nilai luhur budaya nasional sebagai salah satu landasan berpikir, bersikap, dan berperilaku dalam kehidupan;</li>
+                <li>Mewujudkan pranata kehidupan yang beradab menuju terciptanya masyarakat yang tertib dan damai;</li>
+                <li>Menciptakan kehidupan berbangsa dan bernegara yang berdaulat, bersatu, adil, dan makmur; dan</li>
+                <li>Menjadikan UNS sebagai universitas bereputasi internasional.</li>
+            </ol>
         ]]></item>
         <item><![CDATA[
-            <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
-            </ul>
+            <ol>
+                <li>Orientasi berprestasi;</li>
+                <li>Mengutamakan kepuasan pengguna jasa;</li>
+                <li>Kerja sama;</li>
+                <li>Integritas;</li>
+                <li>Berwawasan ke depan; dan</li>
+                <li>Kewirausahaan.</li>
+            </ol>
         ]]></item>
     </string-array>
 </resources>
