--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,91 @@
     <string name="menu_grafik">Grafik</string>
     <string name="menu_profile">Profile</string>
     <string name="button_to_any">Pencet aja</string>
+    
+    <string name="year">Tahun</string>
+    <string name="money">Jumlah Uang</string>
+    <string name="cate">Category</string>
+
+    <!--  Keuangan  -->
+    <string-array name="data_year">
+        <item>Tahun 2015</item>
+        <item>Tahun 2016</item>
+        <item>Tahun 2017</item>
+        <item>Tahun 2018</item>
+        <item>Tahun 2019</item>
+        <item>Tahun 2020</item>
+        <item>Tahun 2021</item>
+        <item>Tahun 2022</item>
+        <item>Tahun 2023</item>
+        <item>Tahun 2024</item>
+    </string-array>
+    
+    <string-array name="data_money">
+        <item>1000000</item>
+        <item>900000</item>
+        <item>750000</item>
+        <item>1400000</item>
+        <item>1600000</item>
+        <item>500000</item>
+        <item>400000</item>
+        <item>1200000</item>
+        <item>1500000</item>
+        <item>1200000</item>
+    </string-array>
+    
+    <string-array name="data_cate">
+        <item>High</item>
+        <item>High</item>
+        <item>Medium</item>
+        <item>High</item>
+        <item>High</item>
+        <item>Medium</item>
+        <item>Low</item>
+        <item>High</item>
+        <item>High</item>
+        <item>High</item>
+    </string-array>
+
+    <!--  Perusahaan  -->
+    <string-array name="data_yearperu">
+        <item>Tahun 2015</item>
+        <item>Tahun 2016</item>
+        <item>Tahun 2017</item>
+        <item>Tahun 2018</item>
+        <item>Tahun 2019</item>
+        <item>Tahun 2020</item>
+        <item>Tahun 2021</item>
+        <item>Tahun 2022</item>
+        <item>Tahun 2023</item>
+        <item>Tahun 2024</item>
+    </string-array>
+
+    <string-array name="data_company">
+        <item>Perusahaan Asia</item>
+        <item>Perusahaan Amerika</item>
+        <item>Perusahaan Eropa</item>
+        <item>Perusahaan Afrika</item>
+        <item>Perusahaan Indonesia</item>
+        <item>Perusahaan Asia Tenggara</item>
+        <item>Perusahaan Arab</item>
+        <item>Perusahaan Solo</item>
+        <item>Perusahaan Mana</item>
+        <item>Perusahaan Gatau</item>
+    </string-array>
+
+    <string-array name="data_moneyperu">
+        <item>1000000</item>
+        <item>900000</item>
+        <item>750000</item>
+        <item>1400000</item>
+        <item>1600000</item>
+        <item>500000</item>
+        <item>400000</item>
+        <item>1200000</item>
+        <item>1500000</item>
+        <item>1200000</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
