Styling side dan bot nav done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="menu_daftar">Daftar Kerjasama</string>
     <string name="menu_prosedur">Prosedur</string>
     <string name="menu_grafik">Grafik</string>
-    <string name="menu_profile">Profile</string>
+    <string name="menu_profile">Profile UNS</string>
 
     <string name="year">Tahun</string>
     <string name="money">Jumlah Uang</string>
